Bug 1653649 - Limit widget size to 16k. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D94332